# XTTS-v2

./: .gitignore  pyproject.toml  voice_clone.py
