[tool.poetry]
name = "xtts-v2"
version = "0.1.0"
description = ""
authors = ["ujlee"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.0"
absl-py = "2.1.0"
aiohappyeyeballs = "2.4.0"
aiohttp = "3.10.5"
aiosignal = "1.3.1"
annotated-types = "0.7.0"
anyascii = "0.3.2"
async-timeout = "4.0.3"
attrs = "24.2.0"
audioread = "3.0.1"
babel = "2.16.0"
bangla = "0.0.2"
blinker = "1.8.2"
blis = "0.7.11"
bnnumerizer = "0.0.2"
bnunicodenormalizer = "0.1.7"
catalogue = "2.0.10"
certifi = "2024.7.4"
cffi = "1.17.0"
charset-normalizer = "3.3.2"
click = "8.1.7"
cloudpathlib = "0.18.1"
confection = "0.1.5"
contourpy = "1.2.1"
coqpit = "0.0.17"
cycler = "0.12.1"
cymem = "2.0.8"
cython = "3.0.11"
dateparser = "1.1.8"
decorator = "5.1.1"
docopt = "0.6.2"
einops = "0.8.0"
encodec = "0.1.1"
filelock = "3.15.4"
flask = "3.0.3"
fonttools = "4.53.1"
frozenlist = "1.4.1"
fsspec = "2024.6.1"
g2pkk = "0.1.2"
grpcio = "1.65.5"
gruut = "2.2.3"
gruut-ipa = "0.13.0"
gruut-lang-de = "2.0.1"
gruut-lang-en = "2.0.1"
gruut-lang-es = "2.0.1"
gruut-lang-fr = "2.0.2"
hangul-romanize = "0.1.0"
huggingface-hub = "0.24.6"
idna = "3.7"
inflect = "7.3.1"
itsdangerous = "2.2.0"
jamo = "0.4.1"
jieba = "0.42.1"
jinja2 = "3.1.4"
joblib = "1.4.2"
jsonlines = "1.2.0"
kiwisolver = "^1.4.5"
tts = "^0.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
